@@ -1,6 +1,9 @@
 homevent (0.2.5) unstable; urgency=low
 
   * Onwards
+  * Added "delta up" to monitor, denoting a counter that doesn't go down
+    (if that happens, the delta will be ignored but the counter will still
+     be used)
 
  -- Matthias Urlichs <matthias@urlichs.de>  Thu, 22 Nov 2007 11:52:02 +0100
 
